intelligent cooling close button fix and toggle button left aligned fixed

--- a/vtr-ui/src/app/components/modal/modal-intelligent-cooling-modes/modal-intelligent-cooling-modes.component.scss
+++ b/vtr-ui/src/app/components/modal/modal-intelligent-cooling-modes/modal-intelligent-cooling-modes.component.scss
@@ -3,16 +3,23 @@
 	color: $main_dark;
 	font-size: $title;
 }
-.close-button {
-	color: #496afd;
-	font-weight: 400;
-	font-size: 2.4rem;
-	line-height: 1;
-	border: none;
-	&:hover {
-		opacity: 0.7;
+.modal-header {
+	border-bottom: none;
+	.close-button {
+		color: #496afd;
+		font-weight: 400;
+		font-size: 2.4rem;
+		line-height: 1;
+		border: none;
+		position: relative;
+		top: -3rem;
+		right: -3rem;
+		&:hover {
+			opacity: 0.7;
+		}
 	}
 }
+
 .vtr-modal-intelligent-cooling-modes {
 
 	&.modal-body {
