--- a/vtr-ui/src/app/components/ui/ui-row-switch/ui-row-switch.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-row-switch/ui-row-switch.component.scss
@@ -18,6 +18,8 @@
 			// padding-right: 3rem;
 			padding-right: 0;
 			display: flex;
+			align-content: flex-start;
+			min-width: 8rem;
 			@media #{$mediaquery_X42} {
 				padding-left: 0;
 			}
@@ -145,8 +147,10 @@
 		}
 
 		.tool-tip-icon {
-			margin-left: 0.9rem;
+			//margin-left: 0.9rem;
 			margin-top: 0.3rem;
+			margin-left: auto;
+			order: 2;
 			&.auto-screen-lock-help-icon {
 				margin-left: 3.5rem;
 			}
